--- a/todos/templates/todos/base.html
+++ b/todos/templates/todos/base.html
@@ -7,9 +7,9 @@
 	{% block content %}{% endblock %}
 	<script src="{{ STATIC_URL}}js/json2.js"></script>
 	<script src="{{ STATIC_URL}}js/jquery-1.7.2.min.js"></script>
-	<script src="{{ STATIC_URL}}js/csrf.min.js"></script>
 	<script src="{{ STATIC_URL}}js/underscore.js"></script>
 	<script src="{{ STATIC_URL}}js/backbone.js"></script>
 	<script src="{{ STATIC_URL}}js/todos.js"></script>
+	{% block js-templates %}{% endblock %}
 </body>
 </html>
